--- a/src/scenes/FleeScene.css
+++ b/src/scenes/FleeScene.css
@@ -17,7 +17,7 @@
 }
 
 .flee-char {
-  bottom: 30px;
+  bottom: 55px;
   left: 40%;
 }
 
