--- a/src/scenes/TravelScene.css
+++ b/src/scenes/TravelScene.css
@@ -12,7 +12,7 @@
 }
 
 .travel-char {
-  bottom: 30px;
+  bottom: 55px;
   left: 50%;
   transform: translateX(-50%);
 }
